--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.3.0"
+    "postcss-simple-vars": "^7.0.1"
   }
 }
