--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^3.20.1",
@@ -32,15 +34,20 @@
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "next": "14.1.0",
+    "node-mocks-http": "^1.14.1",
     "react": "^18.0.0",
     "react-dom": "^18",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.11.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
