--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/react": "^2.2.2",
     "@tiptap/starter-kit": "^2.2.2",
     "dayjs": "^1.11.10",
+    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2024.1.5898.tar.gz",
     "embla-carousel-react": "^7.1.0",
     "next": "14.1.0",
     "react": "^18.0.0",
