--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^7.5.1",
     "@mantine/spotlight": "^7.5.1",
     "@mantine/tiptap": "^7.5.1",
+    "@sendgrid/mail": "^8.1.1",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.3",
     "@tabler/icons-react": "^2.47.0",
