--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^18.0.0",
     "react-dom": "^18",
     "react-router-dom": "^6.22.0",
-    "recharts": "^2.11.0"
+    "recharts": "^2.11.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
