--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@mantine/tiptap": "^7.5.1",
     "@sendgrid/mail": "^8.1.1",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.0",
     "@tabler/icons-react": "^2.47.0",
     "@tiptap/extension-link": "^2.2.2",
     "@tiptap/react": "^2.2.2",
