--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.11.10",
     "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2024.1.5898.tar.gz",
     "embla-carousel-react": "^7.1.0",
+    "jest": "^29.7.0",
     "next": "14.1.0",
     "node-mocks-http": "^1.14.1",
     "react": "^18.0.0",
