--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "postcss": "^8.4.35",
         "postcss-preset-mantine": "^1.13.0",
         "postcss-simple-vars": "^7.0.1",
-        "tailwindcss": "^3.3.0"
+        "tailwindcss": "^3.3.0",
+        "whatwg-fetch": "^3.6.20"
     }
 }
