--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@ on:
   pull_request: 
   workflow_dispatch: 
   push:
-    branches: [testing]
+    branches: [testing, main]
 
 jobs:
   unit-tests:
