--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@ on:
   pull_request: 
   workflow_dispatch: 
   push:
-    branches: [testing, main]
+    branches: [testing, main, jest-test]
 
 jobs:
   unit-tests:
